--- a/src/main/java/com/magusgeek/cg/arena/fx/view/ConfigurationLayout.fxml
+++ b/src/main/java/com/magusgeek/cg/arena/fx/view/ConfigurationLayout.fxml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="639.0" style="-fx-background-color: BLUE;" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Text layoutX="57.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CONFIGURATION" />
-    </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="545.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.ConfigurationLayoutController">
+   <children>
+      <ChoiceBox fx:id="engineChoiceBox" layoutX="164.0" layoutY="274.0" prefHeight="25.0" prefWidth="535.0" />
+      <Label layoutX="14.0" layoutY="278.0" text="Engine" />
+      <TextField fx:id="p1CommandLineInput" layoutX="164.0" layoutY="318.0" prefHeight="25.0" prefWidth="535.0" />
+      <TextField fx:id="p2CommandLineInput" layoutX="164.0" layoutY="362.0" prefHeight="25.0" prefWidth="535.0" />
+      <TextField fx:id="p3CommandLineInput" layoutX="164.0" layoutY="406.0" prefHeight="25.0" prefWidth="535.0" />
+      <TextField fx:id="nbGamesInput" layoutX="163.0" layoutY="450.0" prefHeight="25.0" prefWidth="74.0" />
+      <TextField fx:id="nbThreadsInput" layoutX="625.0" layoutY="450.0" prefHeight="25.0" prefWidth="74.0" />
+      <Label layoutX="14.0" layoutY="322.0" text="P1 command line" />
+      <Label layoutX="14.0" layoutY="366.0" text="P2 command line" />
+      <Label layoutX="14.0" layoutY="410.0" text="P3 command line" />
+      <Label layoutX="14.0" layoutY="454.0" text="Number of games" />
+      <Label layoutX="496.0" layoutY="454.0" text="Number of threads" />
+      <Button layoutX="629.0" layoutY="515.0" mnemonicParsing="false" onAction="#logStuff" prefHeight="25.0" prefWidth="70.0" text="Reset" />
+      <Button layoutX="520.0" layoutY="515.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Stop" />
+      <Button layoutX="411.0" layoutY="515.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Start" />
+      <TextArea fx:id="consoleTextArea" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="241.0" prefWidth="685.0" />
+   </children>
 </Pane>
