--- a/src/main/java/com/magusgeek/cg/arena/fx/view/MainLayout.fxml
+++ b/src/main/java/com/magusgeek/cg/arena/fx/view/MainLayout.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="545.0" prefWidth="903.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="545.0" prefWidth="903.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.MainLayoutController">
    <right>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ListView layoutX="11.0" layoutY="12.0" prefHeight="531.0" prefWidth="177.0" />
+            <ListView fx:id="resultsListView" layoutX="11.0" layoutY="12.0" prefHeight="531.0" prefWidth="177.0" />
          </children>
       </Pane>
    </right>
