--- a/src/main/java/com/magusgeek/cg/arena/fx/view/PlayerLayout.fxml
+++ b/src/main/java/com/magusgeek/cg/arena/fx/view/PlayerLayout.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: red;" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.PlayerLayoutController">
-   <children>
-      <Text layoutX="189.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLAYER" />
-      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#goConfiguration" text="Exit" />
-   </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: red;"
+      xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.PlayerLayoutController">
+    <children>
+        <Text layoutX="189.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLAYER"/>
+        <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#goConfiguration" text="Exit"/>
+    </children>
 </Pane>
