--- a/src/main/java/com/magusgeek/cg/arena/fx/view/ConfigurationLayout.fxml
+++ b/src/main/java/com/magusgeek/cg/arena/fx/view/ConfigurationLayout.fxml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="545.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.ConfigurationLayoutController">
+<?import javafx.scene.text.TextFlow?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="545.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/null"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.magusgeek.cg.arena.fx.view.ConfigurationLayoutController">
     <children>
-        <ChoiceBox fx:id="engineChoiceBox" layoutX="136.0" layoutY="338.0" prefHeight="25.0" prefWidth="563.0" />
-        <Label layoutX="14.0" layoutY="342.0" text="Engine" />
-        <TextField fx:id="p1CommandLineInput" layoutX="136.0" layoutY="382.0" prefHeight="25.0" prefWidth="563.0" />
-        <TextField fx:id="p2CommandLineInput" layoutX="136.0" layoutY="426.0" prefHeight="25.0" prefWidth="563.0" />
-        <TextField fx:id="p3CommandLineInput" layoutX="136.0" layoutY="470.0" prefHeight="25.0" prefWidth="563.0" />
-        <TextField fx:id="nbGamesInput" layoutX="135.0" layoutY="514.0" prefHeight="25.0" prefWidth="74.0" />
-        <TextField fx:id="nbThreadsInput" layoutX="367.0" layoutY="514.0" prefHeight="25.0" prefWidth="74.0" />
-        <Label layoutX="14.0" layoutY="386.0" text="P1 command line" />
-        <Label layoutX="14.0" layoutY="430.0" text="P2 command line" />
-        <Label layoutX="14.0" layoutY="474.0" text="P3 command line" />
-        <Label layoutX="14.0" layoutY="518.0" text="Number of games" />
-        <Label layoutX="243.0" layoutY="518.0" text="Number of threads" />
-        <Button fx:id="resetButton" layoutX="643.0" layoutY="514.0" mnemonicParsing="false" onAction="#resetAction" prefHeight="25.0" prefWidth="55.0" text="Reset" />
-        <Button fx:id="stopButton" layoutX="580.0" layoutY="514.0" mnemonicParsing="false" onAction="#stopAction" prefHeight="25.0" prefWidth="55.0" text="Stop" />
-        <Button fx:id="startButton" layoutX="517.0" layoutY="514.0" mnemonicParsing="false" onAction="#startAction" prefHeight="25.0" prefWidth="55.0" text="Start" />
-        <TextArea fx:id="consoleTextArea" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="305.0" prefWidth="685.0" wrapText="true" />
+        <ChoiceBox fx:id="engineChoiceBox" layoutX="136.0" layoutY="338.0" prefHeight="25.0" prefWidth="563.0"/>
+        <Label layoutX="14.0" layoutY="342.0" text="Engine"/>
+        <TextField fx:id="p1CommandLineInput" layoutX="136.0" layoutY="382.0" prefHeight="25.0" prefWidth="305.0"/>
+        <TextField fx:id="p2CommandLineInput" layoutX="136.0" layoutY="426.0" prefHeight="25.0" prefWidth="305.0"/>
+        <TextField fx:id="p3CommandLineInput" layoutX="136.0" layoutY="470.0" prefHeight="25.0" prefWidth="305.0"/>
+        <TextField fx:id="nbGamesInput" layoutX="135.0" layoutY="514.0" prefHeight="25.0" prefWidth="74.0"/>
+        <TextField fx:id="nbThreadsInput" layoutX="367.0" layoutY="514.0" prefHeight="25.0" prefWidth="74.0"/>
+        <Label layoutX="14.0" layoutY="386.0" text="P1 command line"/>
+        <Label layoutX="14.0" layoutY="430.0" text="P2 command line"/>
+        <Label layoutX="14.0" layoutY="474.0" text="P3 command line"/>
+        <Label layoutX="14.0" layoutY="518.0" text="Number of games"/>
+        <Label layoutX="243.0" layoutY="518.0" text="Number of threads"/>
+        <Button fx:id="resetButton" layoutX="643.0" layoutY="514.0" mnemonicParsing="false" onAction="#resetAction" prefHeight="25.0" prefWidth="55.0" text="Reset"/>
+        <Button fx:id="stopButton" layoutX="580.0" layoutY="514.0" mnemonicParsing="false" onAction="#stopAction" prefHeight="25.0" prefWidth="55.0" text="Stop"/>
+        <Button fx:id="startButton" layoutX="517.0" layoutY="514.0" mnemonicParsing="false" onAction="#startAction" prefHeight="25.0" prefWidth="55.0" text="Start"/>
+        <TextArea fx:id="consoleTextArea" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="305.0" prefWidth="685.0" wrapText="true"/>
+        <TextFlow fx:id="resultsTextFlow" layoutX="459.0" layoutY="381.0" prefHeight="116.0" prefWidth="239.0"/>
     </children>
 </Pane>
